[package]
name = "tasks"
version = "0.1.0"
authors = ["Quentin Delettre <quentin.delettre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_codegen = "0.4.5"
diesel = { version = "1.4.5", features = ["postgres"] }
dotenv = "0.15.0"
serde = { version = "1.0.116", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]